Closed Bug 1251779 Opened 8 years ago Closed 8 years ago

nsPop3Sink.cpp(64) : error C3083: 'LogLevel': the symbol to the left of a '::' must be a type

Categories

(MailNews Core :: Backend, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 47.0

People

(Reporter: rkent, Assigned: rkent)

Details

Attachments

(1 file)

      No description provided.
This is due to a missing #include "mozilla/Logging.h" in nsPop3Sink.cpp  It must have been removed from one of the included .h files.
Assignee: nobody → rkent
Status: NEW → ASSIGNED
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 47.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: