Bug 1251779, new bustage:  nsPop3Sink.cpp(64) : error C3083: 'LogLevel': the symbol to the left of a '::' must be a type, r=bustage